<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="Heading">Welcome to Tic-Tac-Toe</string>
    <string name="Sub_Heading">-Play without pen and paper-</string>
    <string name="Version">-Version 1.4.0</string>
    <string name="Watermark">-Shubha-</string>
    <string name="Content_Description_frame">frame</string>
    <string name="Reset_string">Reset</string>
    <string name="tap">TAP TO PLAY</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>